Hacks to try to use the APM Java agent